opam-version: "2.0"
maintainer:   "Gabriel Radanne <drupyog@zoho.com>"
authors:      [ "Gabriel Radanne" ]
homepage:     "https://github.com/Drup/dowsing"
synopsis: "Dowsing is a type of divination employed in attempts to locate identifiers matching a given type expression"
bug-reports:  "https://github.com/Drup/dowsing/issues"
dev-repo:     "git+https://github.com/Drup/dowsing.git"
license:      "ISC"
version: "dev"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" { >= "1.1" }
  "odoc" {with-doc}
  "containers" { >= "3.0" & < "4.0" }
  "containers-data" { >= "3.0" & < "4.0" }
  "iter"
  "fmt"
  "base-unix"
  "ocp-index"
  "findlib"
]
