(executable
 (name index_construction)
 (modules index_construction)
 (libraries common acic db dowsing_odoc benchmark)
 (flags
  (:standard -open Common)))

(executable
 (name search)
 (modules search)
 (libraries common acic db benchmark)
 (flags
  (:standard -open Common)))

(executable
  (name bench)
  (modules bench)
  (libraries common acic bechamel bechamel-notty bechamel-js notty.unix cmdliner)
  (flags
    (:standard -open Common)))
