(executable
 (name index_construction)
 (modules index_construction)
 (libraries common acic db dowsing_odoc benchmark)
 (flags
  (:standard -open Common)))

(executable
 (name search)
 (modules search)
 (libraries common acic db benchmark)
 (flags
  (:standard -open Common)))

(executable
  (name unif)
  (modules unif)
  (libraries common acic bechamel bechamel-notty bechamel-js notty.unix cmdliner)
  (flags
    (:standard -open Common -open Utils)))
