(executable
 (name populate_partial_order)
 (modules populate_partial_order)
 (libraries alcotest common acic index)
 (flags
  (:standard -open Common)))

(executable
 (name populate_index)
 (modules populate_index)
 (libraries alcotest common acic index compiler-libs)
 (flags
  (:standard -open Common)))
