(rule
 (target fmt.db)
 (deps ../assets/fmt.odocl)
 (action
  (run dowsindex save --index %{target} --poset=true %{deps})))

(cram
 (applies_to basics)
 (deps %{bin:dowsindex} fmt.db))

(rule
 (target idx_from_list.db)
 (action
  (run ../populate_index.exe)))

(cram
 (applies_to type_list_index)
 (deps %{bin:dowsindex} idx_from_list.db))
