(rule
 (target fmt.db)
 (deps ../assets/fmt.odocl)
 (action
  (run dowsing save --index %{target} --poset=true %{deps})))

(cram
 (applies_to basics)
 (deps %{bin:dowsing} fmt.db))

(rule
 (target idx_from_list.db)
 (action
  (run ../populate_index.exe)))

(cram
 (applies_to type_list_index)
 (deps %{bin:dowsing} idx_from_list.db))
